<resources>
    <string name="app_name">Score</string>

    <string name="title_activity_sign_up">Sign_up</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="OpenSans_Light">OpenSans_Light</string>
    <string name="OpenSans_Reguler">OpenSans_Reguler</string>
    <string name="OpenSans_Semibold">M</string>
    <string name="title_activity_info_wall">$core</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="summary">Summary :</string>
    <string name="location">Add Location</string>
    <string name="feed">FEED</string>
    <string name="maptext">Tap on the map to add Location</string>
    <string name="mapdialog">Confirm Location?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="budget">Budget :</string>
    <string name="rs">(In ₹)</string>
    <string name="duration">Duration :</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="next">Next</string>
    <string name="info">Tap on map for Location</string>
    <string name="destination">Destination</string>
    <string name="delivery">Delivery</string>
    <string name="spinner_title">Select Category</string>
    <string name="spinner_title1">Select Duration</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">When do you want it</string>
    <string name="time1">Anytime</string>
    <string name="money">Budget</string>
    <string name="sign">₹</string>
    <string name="details">Details</string>
    <string name="optional">Optional</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="min">Min</string>
    <string name="dash">-</string>
    <string name="max">Max</string>
    <string name="current">Current Location</string>
    <string name="choose">Choose location</string>
    <string name="change">Change?</string>
    <string name="tap">Tap anywhere to select location</string>
    <string name="info_window_title">Title</string>
    <string name="distance">Distance:</string>
    <string name="rupee_sign">₹</string>
    <string name="hypen">-</string>
    <string name="bid">Bid</string>
    <string name="you_are_here">You are here</string>
    <string name="info_window_category">Category:</string>
    <string name="info_window_category1">Type</string>
    <string name="payment">Payment:</string>
    <string name="payment_mode">Mode</string>
    <string name="details1">Details:</string>
    <string name="km">KM</string>
    <string name="place_bid">Place your Bid</string>
    <string name="work_posted">Work Posted</string>
    <string name="postedon">Posted on:</string>
    <string name="responses">Responses:</string>
    <string name="number">Number</string>
    <string name="user_name">Name</string>
    <string name="accept">Accept</string>
    <string name="confirmed">Confirmed</string>
    <string name="accepted">Acccepted</string>
    <string name="Delivered">Delivered?</string>
    <string name="mybids">My Bids</string>
    <string name="status">Status</string>
    <string name="post">Post</string>
    <string name="transaction">Payment</string>
    <string name="credits">50</string>
    <string name="to">TO:</string>
    <string name="account">Account</string>
    <string name="mail">E-mail</string>
    <string name="gender">Gender</string>
    <string name="dob">D-O-B</string>
    <string name="source">Source Add:</string>
    <string name="clickhere">Click here</string>
</resources>
