<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="match_parent"
        android:id="@+id/camera"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="25sp"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/black"
        android:layout_marginTop="10dp"/>
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="match_parent"
        android:id="@+id/galley"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="25sp"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:id="@+id/galleryview"
        android:background="@android:color/black"
        android:layout_marginTop="10dp"/>
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="match_parent"
        android:id="@+id/cancel"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="25sp"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"

        />


</LinearLayout>