<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/list_selector"
    android:layout_height="wrap_content"

    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">



    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_title"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginLeft="10dp"
        />
      <mypocketvakil.example.com.score.custom.CustomTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/tv_payment_to"
          android:text="@string/to"
          android:textColor="@android:color/black"
          android:alpha="0.7"
          android:textSize="15sp"
          android:layout_below="@+id/tv_payment_title"

          android:paddingLeft="5dp"

          android:paddingRight="10dp"
          app:font="@string/OpenSans_Reguler"
          android:layout_marginLeft="10dp"
          />

      <mypocketvakil.example.com.score.custom.CustomTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/tv_payment_name"
          android:text="@string/number"
          android:textColor="@android:color/black"
          android:alpha="0.7"
          android:textSize="15sp"
          android:layout_below="@+id/tv_payment_title"

          android:layout_toRightOf="@+id/tv_payment_to"
          android:layout_toEndOf="@+id/tv_payment_to"
          android:layout_alignTop="@+id/tv_payment_to"
          android:paddingRight="10dp"
          app:font="@string/OpenSans_Reguler"
          android:layout_marginLeft="3dp"
          />
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="center"



        android:paddingLeft="10dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="15dp"


        android:layout_toRightOf="@+id/tv_payment_title"
        android:layout_toEndOf="@+id/tv_payment_title"




        android:text="@string/rupee_sign"
        android:id="@+id/tv_payment_rupeesign1"
        app:font="@string/OpenSans_Reguler"/>
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_budget"
        android:text="@string/money"
        android:textColor="#1f998b"
        android:textSize="20sp"
        android:paddingLeft="3dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/tv_payment_rupeesign1"
        android:layout_toEndOf="@+id/tv_payment_rupeesign1"
        android:paddingRight="10dp"


        app:font="@string/OpenSans_Reguler"

        />



</RelativeLayout>