<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_more">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        android:background="@drawable/info_bg"

        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/instagram"
            android:layout_marginTop="6dp"
            android:id="@+id/iv_info_user"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/instagram"

            android:id="@+id/iv_info_work"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_info_user"
            />

        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_info_work"
            android:text="@string/info_window_title"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_info_title"
            app:font="@string/OpenSans_Reguler"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_below="@+id/tv_info_title"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            android:id="@+id/v_view1"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_view1"
            android:text="@string/info_window_category"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:textSize="18sp"

            android:id="@+id/tv_info_category"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_info_category"
            android:layout_alignBottom="@+id/tv_info_category"
            android:text="@string/info_window_category1"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:textSize="18sp"

            android:id="@+id/tv_info_category1"
            app:font="@string/OpenSans_Reguler"/>

        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="7dp"


            android:layout_below="@+id/tv_info_category"
            android:text="@string/payment"
            android:id="@+id/tv_info_payment"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"

            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/tv_info_payment"
            android:layout_alignBottom="@+id/tv_info_payment"
            android:text="@string/payment_mode"
            android:id="@+id/tv_info_payment_mode"
            app:font="@string/OpenSans_Reguler"
            />

        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="7dp"


            android:layout_below="@+id/tv_info_payment"
            android:text="@string/duration"
            android:id="@+id/tv_info_duration"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"

            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/tv_info_duration"
            android:layout_alignBottom="@+id/tv_info_duration"
            android:text="@string/time1"
            android:id="@+id/tv_info_time"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="7dp"


            android:layout_below="@+id/tv_info_duration"
            android:text="@string/details1"
            android:id="@+id/tv_info_details"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/tv_info_duration"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/tv_info_details"
            android:layout_alignBaseline="@+id/tv_info_details"
            android:text="@string/description"
            android:id="@+id/tv_info_description"
            app:font="@string/OpenSans_Reguler"
            />

        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:paddingRight="6dp"
            android:paddingLeft="10dp"

            android:layout_below="@+id/tv_info_details"
            android:layout_marginTop="10dp"
            android:text="@string/distance"
            android:id="@+id/tv_info_distance"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:paddingLeft="10dp"
            android:paddingRight="3dp"


            android:layout_toRightOf="@+id/tv_info_distance"
            android:layout_alignBottom="@+id/tv_info_distance"
            android:text="@string/location"
            android:id="@+id/tv_info_location"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"


            android:layout_below="@+id/tv_info_details"
            android:layout_toRightOf="@+id/tv_info_location"
            android:layout_alignTop="@+id/tv_info_location"
            android:text="@string/km"
            android:id="@+id/tv_info_km"
            app:font="@string/OpenSans_Reguler"
            />
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_below="@+id/tv_info_distance"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/budget"
            android:id="@+id/tv_info_budget"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_toRightOf="@+id/tv_info_budget"
            android:layout_alignBottom="@+id/tv_info_budget"


            android:layout_marginTop="5dp"

            android:text="@string/rupee_sign"
            android:id="@+id/tv_info_rupeesign1"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"


            android:layout_toRightOf="@+id/tv_info_rupeesign1"
            android:layout_alignBottom="@+id/tv_info_rupeesign1"
            android:layout_marginTop="5dp"

            android:text="@string/min"
            android:id="@+id/tv_info_min"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/AppColor"


            android:layout_toRightOf="@+id/tv_info_min"
            android:layout_alignBottom="@+id/tv_info_min"


            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/hypen"
            android:id="@+id/text7"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_toRightOf="@+id/text7"
            android:layout_alignBottom="@+id/text7"

            android:layout_marginLeft="5dp"

            android:layout_marginTop="5dp"
            android:text="@string/rupee_sign"
            android:id="@+id/tv_info_rupeesign2"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_toRightOf="@+id/tv_info_rupeesign2"
            android:layout_alignBottom="@+id/tv_info_rupeesign2"
            android:layout_marginTop="5dp"
            android:text="@string/max"
            android:id="@+id/tv_info_max"
            app:font="@string/OpenSans_Reguler"/>
        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/violet"
            android:layout_below="@+id/tv_info_budget"
            android:layout_marginTop="25dp"
            android:text="@string/place_bid"
            android:paddingRight="6dp"
            android:paddingLeft="10dp"
            android:id="@+id/tv_info_bid"
            app:font="@string/OpenSans_Reguler"/>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/next"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/tv_info_bid"
            android:layout_alignBottom="@+id/tv_info_bid"
            android:id="@+id/iv_info"/>
        <mypocketvakil.example.com.score.custom.CustomEditText

            android:id="@+id/et_info_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:background="@null"
            android:paddingLeft="3dp"
            android:paddingRight="10dp"
            android:textColor="@color/purple"
            android:singleLine="true"
            android:hint="Your Bid"


            android:layout_toRightOf="@+id/iv_info"
            android:layout_alignBottom="@+id/iv_info"
            android:textColorHint="@android:color/holo_purple"

            android:textSize="18sp"
            app:font="@string/OpenSans_Reguler"
            />

        <mypocketvakil.example.com.score.custom.CustomTextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_info_submit"

            android:layout_height="wrap_content"



            android:textColor="@android:color/white"

            android:text="@string/submit"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_below="@+id/tv_info_bid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16sp"
            android:background="@drawable/signup_button"
            android:textSize="25sp"
            android:layout_marginBottom="6dp"
            app:font="@string/OpenSans_Reguler"

            />

    </RelativeLayout>

</ScrollView>