<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="wrap_content"
        android:id="@+id/tv_map_dialog"

        android:layout_height="wrap_content"



        android:textColor="@color/bg_color"

        android:text="@string/mapdialog"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"

        android:textSize="@dimen/twenty"
        app:font="@string/OpenSans_Reguler"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_dialog"
        android:layout_below="@+id/tv_map_dialog"
        android:orientation="horizontal"
        android:layout_marginTop="56dp"

        >
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="0dp"
        android:id="@+id/tv_dialog_yes"

        android:layout_height="wrap_content"
        android:layout_weight="1"





        android:textColor="@android:color/white"
        android:background="@color/AppColor"
        android:text="@string/yes"
        android:textAlignment="center"
        android:layout_gravity="center"


        android:textSize="26sp"
        app:font="@string/OpenSans_Reguler"
        android:textStyle="bold"
        />
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:layout_marginLeft="1dp"/>
    <mypocketvakil.example.com.score.custom.CustomTextView
        android:layout_width="0dp"
        android:id="@+id/tv_dialog_no"

        android:layout_height="wrap_content"
        android:layout_weight="1"



        android:textColor="@android:color/white"
        android:background="@color/AppColor"
        android:layout_below="@+id/tv_map_dialog"
        android:layout_toRightOf="@+id/tv_dialog_yes"
        android:text="@string/no"

        android:layout_gravity="center"
        android:textAlignment="center"


        android:textSize="26sp"
        app:font="@string/OpenSans_Reguler"
        android:textStyle="bold"
        />

    </LinearLayout>
</RelativeLayout>